--- a/releng/server-minimal/pom.xml
+++ b/releng/server-minimal/pom.xml
@@ -164,13 +164,18 @@
 		<!-- CMS -->
 		<!-- <dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-cms-api</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-cms-internal</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+		 	<artifactId>dirigible-cms</artifactId>
+		 	<version>5.12.7</version>
+		 	<exclusions>
+				<exclusion>
+					<groupId>org.eclipse.dirigible</groupId>
+					<artifactId>dirigible-cms-managed</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.dirigible</groupId>
+					<artifactId>dirigible-cms-database</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency> -->
 		
 		<!-- BPM -->
