--- a/modules/cms/cms-all/pom.xml
+++ b/modules/cms/cms-all/pom.xml
@@ -46,7 +46,7 @@
             <artifactId>dirigible-cms-managed</artifactId>
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-facade-cms</artifactId>
@@ -80,6 +80,11 @@
 	    <dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-ide-ui-csv</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+		</dependency>
+        <dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide-ui-csvim</artifactId>
 			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
     </dependencies>
