--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	Do a fast build:
 		mvn -T 1C clean install -Dmaven.test.skip=true -DskipTests -Dmaven.javadoc.skip=true
 
-	Synchronize WebJars content:
+	Synchronize WebJars like content:
 		mvn clean install -DskipTests -P content
 		mvn clean install -DskipTests
 
@@ -369,69 +369,6 @@
 				</plugins>
 			</build>
 		</profile>
-		
-		<!-- <profile>
-			<id>content</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<finalName>${project.artifactId}</finalName>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-scm-plugin</artifactId>
-						<version>${maven.scm.plugin.version}</version>
-						<configuration>
-							<goals>checkout</goals>
-							<checkoutDirectory>${content.scm.checkoutDirectory}</checkoutDirectory>
-							<server>${content.scm.server}</server>
-						</configuration>
-						<executions>
-							<execution>
-								<id>generated-sources</id>
-								<phase>generate-sources</phase>
-								<goals>
-									<goal>checkout</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<artifactId>maven-resources-plugin</artifactId>
-						<version>${maven.resource.plugin.version}</version>
-						<executions>
-							<execution>
-								<id>copy-content-resources</id>
-								<phase>compile</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<outputDirectory>${content.output.directory}</outputDirectory>
-									<resources>
-										<resource>
-											<directory>${content.source.directory}</directory>
-										</resource>
-									</resources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>${maven.compiler.plugin.version}</version>
-						<configuration>
-							<source>${maven.compiler.source}</source>
-							<target>${maven.compiler.target}</target>
-							<debug>true</debug>
-							<debuglevel>lines,vars,source</debuglevel>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile> -->
 		
 	</profiles>
 
