h2 database version updated to 1.4.200

--- a/modules/core/core-scheduler/src/main/resources/quartz.properties
+++ b/modules/core/core-scheduler/src/main/resources/quartz.properties
@@ -32,7 +32,7 @@ org.quartz.jobStore.misfireThreshold=60000
 org.quartz.jobStore.class=org.eclipse.dirigible.core.scheduler.quartz.CustomJobStore
 org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 org.quartz.jobStore.useProperties=false
-org.quartz.jobStore.dataSource=DefaultDB
+org.quartz.jobStore.dataSource=SystemDB
 org.quartz.jobStore.tablePrefix=QUARTZ_
 
 org.quartz.jobStore.isClustered=true
@@ -42,7 +42,7 @@ org.quartz.jobStore.clusterCheckinInterval=20000
 # Configure Datasources  
 #============================================================================
 
-org.quartz.dataSource.DefaultDB.connectionProvider.class=org.eclipse.dirigible.core.scheduler.quartz.DatasourceConnectionProvider
+org.quartz.dataSource.SystemDB.connectionProvider.class=org.eclipse.dirigible.core.scheduler.quartz.DatasourceConnectionProvider
 
 #============================================================================
 # Configure Plugins 
