--- a/modules/bpm/bpm-flowable/pom.xml
+++ b/modules/bpm/bpm-flowable/pom.xml
@@ -125,7 +125,7 @@
 		<dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
-		    <version>1.3.176</version>
+		    <version>${h2database.version}</version>
 		    <scope>test</scope>
 		</dependency>
 		  
