--- a/modules/cms/cms-database/pom.xml
+++ b/modules/cms/cms-database/pom.xml
@@ -110,7 +110,7 @@
 		<dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
-		    <version>1.4.193</version>
+		    <version>${h2database.version}</version>
 		    <scope>test</scope>
 		</dependency>
     </dependencies>
