--- a/modules/database/database-data-models/pom.xml
+++ b/modules/database/database-data-models/pom.xml
@@ -99,7 +99,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.193</version>
+			<version>${h2database.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
