--- a/modules/database/database-h2/pom.xml
+++ b/modules/database/database-h2/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
-		    <version>1.3.176</version>
+		    <version>${h2database.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
