--- a/api/api-facade/api-log/pom.xml
+++ b/api/api-facade/api-log/pom.xml
@@ -50,6 +50,18 @@
 			<version>${logback.version}</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-persistence</artifactId>
+            <version>5.12.10</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-security</artifactId>
+			<version>5.12.10</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
