fix: updates jstree due to windows build errors

--- a/resources/resources-all/pom.xml
+++ b/resources/resources-all/pom.xml
@@ -108,9 +108,9 @@
 		    <version>1.12.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.webjars.npm</groupId>
+		    <groupId>org.webjars</groupId>
 		    <artifactId>jstree</artifactId>
-		    <version>3.3.4</version>
+		    <version>3.3.5</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.webjars</groupId>
