--- a/pom.xml
+++ b/pom.xml
@@ -630,21 +630,11 @@
 
 	<modules>
 		<module>api</module>
+		<module>modules</module>
 		<module>ide</module>
 		<module>templates</module>
 		<module>resources</module>
 		<module>ext</module>
-
-		<module>modules/engines</module>
-		<module>modules/services</module>
-		<module>modules/repository</module>
-		<module>modules/core</module>
-		<module>modules/database</module>
-		<module>modules/commons</module>
-		<module>modules/cms</module>
-		<module>modules/bpm</module>
-		<module>modules/security</module>
-		<module>modules/odata</module>
 
 		<module>groups/runtime-all</module>
 		<module>groups/runtime-javascript</module>
