Fixed: #99 - Liquibase integration

--- a/modules/database/pom.xml
+++ b/modules/database/pom.xml
@@ -25,6 +25,7 @@
 		<module>database-sql</module>
 		<module>database-h2</module>
 		<module>database-dynamic</module>
+		<module>database-changelog</module>
 	</modules>
 
 </project>
