--- a/modules/database/database-all/pom.xml
+++ b/modules/database/database-all/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>dirigible-database-dynamic</artifactId>
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-changelog</artifactId>
+            <version>6.0.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- Database Implementations -->
         <!-- 
