--- a/modules/repository/repository-api/pom.xml
+++ b/modules/repository/repository-api/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>dirigible-commons-config</artifactId>
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+			<version>3.0.3</version>
+		</dependency>
     </dependencies>
 
 </project>
