--- a/api/api-facade/api-log/pom.xml
+++ b/api/api-facade/api-log/pom.xml
@@ -62,6 +62,12 @@
 			<version>5.12.10</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-core-problems</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 
