--- a/modules/core/core-all/pom.xml
+++ b/modules/core/core-all/pom.xml
@@ -53,6 +53,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-problems</artifactId>
+            <version>6.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-core-publisher</artifactId>
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
