separate templating related functionality

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -25,6 +25,7 @@
 		<module>bpm</module>
 		<module>security</module>
 		<module>odata</module>
+		<module>templating</module>
 	</modules>
 
 </project>
