--- a/modules/templating/templating-javascript/pom.xml
+++ b/modules/templating/templating-javascript/pom.xml
@@ -4,13 +4,13 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-core-parent</artifactId>
+		<artifactId>dirigible-templating-parent</artifactId>
 		<version>6.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Core - Generation - Javascript</name>
-	<artifactId>dirigible-core-generation-javascript</artifactId>
+	<name>Core - Templating - Javascript</name>
+	<artifactId>dirigible-core-templating-javascript</artifactId>
     <packaging>jar</packaging>
 
     <build>
@@ -33,7 +33,7 @@
     <dependencies>
     	<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-core-generation</artifactId>
+			<artifactId>dirigible-core-templating</artifactId>
 			<version>6.0.0-SNAPSHOT</version>
     	</dependency>
     	<dependency>
