--- a/modules/templating/templating-velocity/pom.xml
+++ b/modules/templating/templating-velocity/pom.xml
@@ -4,13 +4,13 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-core-parent</artifactId>
+		<artifactId>dirigible-templating-parent</artifactId>
 		<version>6.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Core - Generation</name>
-	<artifactId>dirigible-core-generation</artifactId>
+	<name>Core - Generation - Velocity</name>
+	<artifactId>dirigible-core-templating-velocity</artifactId>
     <packaging>jar</packaging>
 
     <build>
@@ -33,9 +33,16 @@
     <dependencies>
     	<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-commons-api</artifactId>
+			<artifactId>dirigible-core-templating</artifactId>
 			<version>6.0.0-SNAPSHOT</version>
     	</dependency>
+
+    	<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+			<type>jar</type>
+		</dependency>
     </dependencies>
 
 </project>
