--- a/releng/anonymous-runtime/pom.xml
+++ b/releng/anonymous-runtime/pom.xml
@@ -191,6 +191,13 @@
 			<artifactId>dirigible-bpm</artifactId>
 			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- Templating Core -->
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-templating-all</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Templates Plugins -->
 		<dependency>
