--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -254,6 +254,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- Templating Core -->
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-templating-all</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Templates Plugins -->
 		<dependency>
