--- a/releng/sap-all-ephemeral/pom.xml
+++ b/releng/sap-all-ephemeral/pom.xml
@@ -200,6 +200,13 @@
 			<groupId>org.eclipse.dirigible</groupId>
 			<version>4.3.0</version>
 		</dependency>
+		
+		<!-- Templating Core -->
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-templating-all</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Templates Plugins -->
 		<dependency>
