--- a/releng/sap-cf-base/pom.xml
+++ b/releng/sap-cf-base/pom.xml
@@ -159,6 +159,13 @@
 		 	<artifactId>dirigible-ide</artifactId>
 		 	<version>6.0.0-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- Templating Core -->
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-templating-all</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Templates Plugins -->
 		<dependency>
