--- a/templates/template-all/pom.xml
+++ b/templates/template-all/pom.xml
@@ -31,6 +31,14 @@
 	</properties>
 
 	<dependencies>
+	
+		<!-- Templating Core -->
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-templating-all</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+		</dependency>
+		
 		<!-- Templates Plugins -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
