Fixes #1051 [Releng] SAP CMS - Startup Errors

--- a/modules/repository/pom.xml
+++ b/modules/repository/pom.xml
@@ -17,6 +17,7 @@
         <module>repository-all</module>
 		<module>repository-api</module>
 		<module>repository-api-test</module>
+		<module>repository-cache</module>
 		<module>repository-database</module>
 		<module>repository-local</module>
 		<module>repository-master</module>
