--- a/releng/sap-cms/src/main/resources/dirigible.properties
+++ b/releng/sap-cms/src/main/resources/dirigible.properties
@@ -19,6 +19,7 @@ DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Neo - CMS
 # Local configuration
 DIRIGIBLE_DATABASE_PROVIDER=local
 DIRIGIBLE_REPOSITORY_PROVIDER=local
+DIRIGIBLE_REPOSITORY_CACHE_ENABLED=false
 
 # Database configuration
 #DIRIGIBLE_DATABASE_PROVIDER=managed
