--- a/modules/cms/cms-all/pom.xml
+++ b/modules/cms/cms-all/pom.xml
@@ -68,6 +68,11 @@
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-ide-ui-core</artifactId>
+            <version>6.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-ide-ui-documents</artifactId>
 		 	<version>6.0.0-SNAPSHOT</version>
