--- a/modules/cms/pom.xml
+++ b/modules/cms/pom.xml
@@ -24,4 +24,7 @@
 		<module>cms-resources</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
 </project>
