--- a/modules/repository/repository-all/pom.xml
+++ b/modules/repository/repository-all/pom.xml
@@ -38,6 +38,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-cache</artifactId>
+            <version>6.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-repository-search</artifactId>
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
