--- a/modules/repository/repository-cache/pom.xml
+++ b/modules/repository/repository-cache/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Repository - API</name>
-	<artifactId>dirigible-repository-api</artifactId>
+	<name>Repository - Cache</name>
+	<artifactId>dirigible-repository-cache</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -41,6 +41,16 @@
             <artifactId>dirigible-commons-config</artifactId>
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-api</artifactId>
+            <version>6.0.0-SNAPSHOT</version>
+        </dependency>
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+			<version>${caffeine.version}</version>
+		</dependency>
     </dependencies>
 
 </project>
