--- a/modules/repository/repository-local/pom.xml
+++ b/modules/repository/repository-local/pom.xml
@@ -68,6 +68,12 @@
             <version>6.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-cache</artifactId>
+            <version>6.0.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
