--- a/releng/sap-cms/src/main/webapp/WEB-INF/web.xml
+++ b/releng/sap-cms/src/main/webapp/WEB-INF/web.xml
@@ -103,11 +103,11 @@
 	</filter-mapping>
 	
 	<!-- Resource References  -->
-	<resource-ref>
+	<!-- <resource-ref>
 		<res-ref-name>jdbc/DefaultDB</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
-	</resource-ref>
+	</resource-ref> -->
 
 	<resource-ref>
     	<res-ref-name>connectivity/Configuration</res-ref-name>
