--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -37,4 +37,7 @@
 		<module>server-minimal</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../licensing-header.txt</license.header.location>
+	</properties>
 </project>
