--- a/releng/sap-all-ephemeral/src/main/resources/dirigible.properties
+++ b/releng/sap-all-ephemeral/src/main/resources/dirigible.properties
@@ -18,3 +18,4 @@ DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Neo - Ephemeral
 DIRIGIBLE_DATABASE_PROVIDER=local
 DIRIGIBLE_CMS_PROVIDER=managed
 DIRIGIBLE_DESTINATIONS_PROVIDER=managed
+DIRIGIBLE_REPOSITORY_CACHE_ENABLED=false
