--- a/releng/sap-all/src/main/resources/dirigible.properties
+++ b/releng/sap-all/src/main/resources/dirigible.properties
@@ -17,6 +17,7 @@ DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Neo
 DIRIGIBLE_REPOSITORY_PROVIDER=database
 DIRIGIBLE_REPOSITORY_DATABASE_DATASOURCE_NAME=DefaultDB
+DIRIGIBLE_REPOSITORY_CACHE_ENABLED=false
 DIRIGIBLE_DATABASE_PROVIDER=managed
 DIRIGIBLE_DATABASE_DATASOURCE_NAME_DEFAULT=DefaultDB
 DIRIGIBLE_CMS_PROVIDER=managed
