--- a/ide/ui/pom.xml
+++ b/ide/ui/pom.xml
@@ -21,6 +21,8 @@
 	</scm>
 	
 	<properties>
+		<profile.phase>generate-sources</profile.phase>
+
 		<content.repository.name>dirigiblelabs</content.repository.name>
 		<content.project.name>dirigiblelabs</content.project.name>
 
@@ -116,7 +118,7 @@
 						<executions>
 							<execution>
 								<id>generated-sources</id>
-								<phase>generate-sources</phase>
+								<phase>${profile.phase}</phase>
 								<goals>
 									<goal>checkout</goal>
 								</goals>
