--- a/resources/pom.xml
+++ b/resources/pom.xml
@@ -32,6 +32,10 @@
 		<module>resources-theme-fiori</module>
 	</modules>
 
+	<properties>
+		<profile.phase>generate-sources</profile.phase>
+	</properties>
+
 	<profiles>
 		<profile>
 			<id>content</id>
@@ -65,7 +69,7 @@
 						<executions>
 							<execution>
 								<id>generated-sources</id>
-								<phase>generate-sources</phase>
+								<phase>${profile.phase}</phase>
 								<goals>
 									<goal>checkout</goal>
 								</goals>
