--- a/resources/resources-all/pom.xml
+++ b/resources/resources-all/pom.xml
@@ -12,21 +12,9 @@
 	<name>Resources</name>
 	<artifactId>dirigible-resources</artifactId>
     <packaging>jar</packaging>
-
-	<scm>
-		<url>${content.scm.url}</url>
-		<connection>${content.scm.connection}</connection>
-		<developerConnection>${content.scm.developerConnection}</developerConnection>
-	</scm>
 	
 	<properties>
-		<content.repository.name>dirigiblelabs</content.repository.name>
-		<content.project.name>dirigiblelabs</content.project.name>
-
-		<content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
-		<content.scm.connection>scm:git:git://github.com/dirigiblelabs/${content.repository.name}.git</content.scm.connection>
-        <content.scm.developerConnection>scm:git:https://github.com/dirigiblelabs/${content.repository.name}</content.scm.developerConnection>
-
+		<profile.phase>none</profile.phase>
 	</properties>
 
 	<dependencies>
