--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -59,6 +59,11 @@
 		 	<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide-ui-problems</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-ide-ui-database</artifactId>
 		 	<version>6.0.0-SNAPSHOT</version>
