--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,4 +17,4 @@ jobs:
       with:
         java-version: 13
     - name: Maven Build
-      run: mvn clean install -Dmaven.javadoc.skip=true
+      run: mvn clean install -Dmaven.javadoc.skip=false
