#1074 [Build] Allow each module to be build separately - IDE

--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -23,4 +23,7 @@
 		<module>ui</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../licensing-header.txt</license.header.location>
+	</properties>
 </project>
