--- a/pom.xml
+++ b/pom.xml
@@ -626,7 +626,7 @@
 		<content.source.directory>target/${content.project.name}</content.source.directory>
 		<content.output.directory>${basedir}/src/main/resources/META-INF/dirigible/${content.project.name}</content.output.directory>
 
-		<license.header.location>${maven.multiModuleProjectDirectory}/licensing-header.txt</license.header.location>
+		<license.header.location>licensing-header.txt</license.header.location>
 
 		<skip.tests>true</skip.tests>
 	</properties>
