--- a/ide/ide-all/pom.xml
+++ b/ide/ide-all/pom.xml
@@ -26,4 +26,8 @@
 		</dependency>
 	</dependencies>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
