--- a/ide/services/ide-console/pom.xml
+++ b/ide/services/ide-console/pom.xml
@@ -43,7 +43,10 @@
 		    <version>1.1</version>
 		    <scope>provided</scope>
 		</dependency>
-		
     </dependencies>
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
