--- a/ide/services/ide-terminal/pom.xml
+++ b/ide/services/ide-terminal/pom.xml
@@ -49,4 +49,8 @@
 		</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
