--- a/ide/services/pom.xml
+++ b/ide/services/pom.xml
@@ -28,4 +28,7 @@
 		<module>ide-workspaces</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
 </project>
