--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -15,6 +15,7 @@
 
 	<properties>
 		<profile.phase>none</profile.phase>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
 	</properties>
 
 	<dependencies>
