#1074 [Build] Allow each module to be build separately - API

--- a/api/api-facade/api-mail/pom.xml
+++ b/api/api-facade/api-mail/pom.xml
@@ -50,4 +50,8 @@
 		</dependency>
 	</dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
