--- a/api/api-javascript/api-all/pom.xml
+++ b/api/api-javascript/api-all/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
         <profile.phase>none</profile.phase>
+        <license.header.location>../../../licensing-header.txt</license.header.location>
 	</properties>
 
 	<dependencies>
