--- a/api/api-javascript/pom.xml
+++ b/api/api-javascript/pom.xml
@@ -41,6 +41,7 @@
 
 	<properties>
 		<profile.phase>generate-sources</profile.phase>
+		<license.header.location>../../licensing-header.txt</license.header.location>
 	</properties>
 
 	<profiles>
