--- a/api/pom.xml
+++ b/api/pom.xml
@@ -20,4 +20,8 @@
 		<module>api-javascript</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
