--- a/api/api-facade/api-core/pom.xml
+++ b/api/api-facade/api-core/pom.xml
@@ -66,7 +66,10 @@
             <artifactId>dirigible-engine-command</artifactId>
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
-
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
