--- a/api/api-facade/api-http/pom.xml
+++ b/api/api-facade/api-http/pom.xml
@@ -58,7 +58,10 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.3</version>
 		</dependency>
-
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
