--- a/api/api-facade/api-indexing/pom.xml
+++ b/api/api-facade/api-indexing/pom.xml
@@ -48,7 +48,10 @@
 			<version>6.0.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
