--- a/api/api-facade/api-tests/pom.xml
+++ b/api/api-facade/api-tests/pom.xml
@@ -252,4 +252,8 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <license.header.location>../../../licensing-header.txt</license.header.location>
+    </properties>
+
 </project>
