--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -32,4 +32,8 @@
 		<module>api-net</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
