#1074 [Build] Allow each module to be build separately - Ext

--- a/ext/ext-modules/pom.xml
+++ b/ext/ext-modules/pom.xml
@@ -22,6 +22,8 @@
 	</scm>
 	
 	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+
 		<content.repository.name>dirigiblelabs</content.repository.name>
 		<content.project.name>dirigiblelabs</content.project.name>
 
