--- a/ext/ext-all/pom.xml
+++ b/ext/ext-all/pom.xml
@@ -111,4 +111,8 @@
 		</dependency>
 	</dependencies>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
