--- a/ext/ext-api/api-cassandra/pom.xml
+++ b/ext/ext-api/api-cassandra/pom.xml
@@ -151,7 +151,10 @@
 			<version>6.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
