--- a/ext/ext-api/api-rabbitmq/pom.xml
+++ b/ext/ext-api/api-rabbitmq/pom.xml
@@ -161,4 +161,8 @@
 		</dependency>
 	</dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
