--- a/ext/ext-api/pom.xml
+++ b/ext/ext-api/pom.xml
@@ -26,4 +26,8 @@
 		<module>api-spark</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
