--- a/ext/pom.xml
+++ b/ext/pom.xml
@@ -20,4 +20,8 @@
 		<module>ext-modules</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
