--- a/groups/runtime-javascript/pom.xml
+++ b/groups/runtime-javascript/pom.xml
@@ -90,4 +90,9 @@
 		 	<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
