#1074 [Build] Allow each module to be build separately - Releng

--- a/ide/services/ide-publisher/pom.xml
+++ b/ide/services/ide-publisher/pom.xml
@@ -43,4 +43,7 @@
         </dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
 </project>
