--- a/releng/anonymous-runtime/pom.xml
+++ b/releng/anonymous-runtime/pom.xml
@@ -5,9 +5,9 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-parent</artifactId>
+		<artifactId>dirigible-releng-parent</artifactId>
 		<version>6.0.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<name>Releng - Anonymous - Runtime</name>
@@ -239,5 +239,9 @@
 			<version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
