--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -3,9 +3,9 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-parent</artifactId>
+		<artifactId>dirigible-releng-parent</artifactId>
 		<version>6.0.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<name>Releng - Desktop - All</name>
@@ -302,5 +302,9 @@
 			<version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
