--- a/releng/sap-kyma-base/pom.xml
+++ b/releng/sap-kyma-base/pom.xml
@@ -4,9 +4,9 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-parent</artifactId>
+		<artifactId>dirigible-releng-parent</artifactId>
 		<version>6.0.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
   <name>Releng - SAP - Kyma - Base</name>
@@ -184,5 +184,9 @@
 			<version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
