#1074 [Build] Allow each module to be build separately - Modules BPM

--- a/modules/bpm/bpm-flowable/pom.xml
+++ b/modules/bpm/bpm-flowable/pom.xml
@@ -128,7 +128,10 @@
 		    <version>${h2database.version}</version>
 		    <scope>test</scope>
 		</dependency>
-		  
     </dependencies>
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
