--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -28,4 +28,8 @@
 		<module>templating</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
