--- a/modules/bpm/bpm-resources/pom.xml
+++ b/modules/bpm/bpm-resources/pom.xml
@@ -103,5 +103,9 @@
 			</build>
 		</profile>
 	</profiles>
-	
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
