--- a/modules/bpm/pom.xml
+++ b/modules/bpm/pom.xml
@@ -22,4 +22,8 @@
         <module>bpm-resources</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
