#1074 [Build] Allow each module to be build separately - Modules CMS

--- a/modules/cms/api-cms/pom.xml
+++ b/modules/cms/api-cms/pom.xml
@@ -55,7 +55,10 @@
 			<version>${chemistry.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
