--- a/modules/cms/cms-resources/api-cms/pom.xml
+++ b/modules/cms/cms-resources/api-cms/pom.xml
@@ -21,6 +21,8 @@
 	</scm>
 	
 	<properties>
+		<license.header.location>../../../../licensing-header.txt</license.header.location>
+
 		<content.repository.name>api-cms</content.repository.name>
 		<content.project.name>cms</content.project.name>
 
