--- a/modules/cms/cms-resources/pom.xml
+++ b/modules/cms/cms-resources/pom.xml
@@ -106,5 +106,9 @@
 			</build>
 		</profile>
 	</profiles>
-	
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
