--- a/modules/cms/api-documents/pom.xml
+++ b/modules/cms/api-documents/pom.xml
@@ -50,4 +50,8 @@
 		</dependency>
 	</dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
