--- a/modules/cms/cms-database/pom.xml
+++ b/modules/cms/cms-database/pom.xml
@@ -115,4 +115,8 @@
 		</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
