--- a/modules/cms/cms-resources/ide-csv/pom.xml
+++ b/modules/cms/cms-resources/ide-csv/pom.xml
@@ -19,15 +19,15 @@
     </scm>
 
     <properties>
+        <license.header.location>../../../../licensing-header.txt</license.header.location>
+
         <content.repository.name>ide-csv</content.repository.name>
         <content.project.name>ide-csv</content.project.name>
-        
         <scmVersion>main</scmVersion>
 
         <content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
         <content.scm.connection>scm:git:git://github.com/dirigiblelabs/${content.repository.name}.git</content.scm.connection>
         <content.scm.developerConnection>scm:git:https://github.com/dirigiblelabs/${content.repository.name}</content.scm.developerConnection>
-
     </properties>
 
 </project>
