#1074 [Build] Allow each module to be build separately - Modules Commons

--- a/modules/commons/commons-config/pom.xml
+++ b/modules/commons/commons-config/pom.xml
@@ -30,4 +30,8 @@
         </plugins>
     </build>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
