--- a/modules/commons/commons-test/pom.xml
+++ b/modules/commons/commons-test/pom.xml
@@ -68,4 +68,8 @@
 		</dependency>
 	</dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
