--- a/modules/commons/commons-api/pom.xml
+++ b/modules/commons/commons-api/pom.xml
@@ -37,4 +37,9 @@
 			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
