--- a/modules/commons/pom.xml
+++ b/modules/commons/pom.xml
@@ -24,4 +24,8 @@
 		<module>commons-timeout</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
