--- a/modules/database/database-all/pom.xml
+++ b/modules/database/database-all/pom.xml
@@ -92,4 +92,8 @@
         -->
     </dependencies>
 
+    <properties>
+        <license.header.location>../../../licensing-header.txt</license.header.location>
+    </properties>
+
 </project>
