--- a/modules/database/database-custom/pom.xml
+++ b/modules/database/database-custom/pom.xml
@@ -48,4 +48,8 @@
 		</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
