--- a/modules/database/database-data-models/pom.xml
+++ b/modules/database/database-data-models/pom.xml
@@ -128,4 +128,8 @@
         </dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
