--- a/modules/database/database-data-structures/pom.xml
+++ b/modules/database/database-data-structures/pom.xml
@@ -97,4 +97,8 @@
         </dependency>
 	</dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
