--- a/modules/database/pom.xml
+++ b/modules/database/pom.xml
@@ -28,4 +28,8 @@
 		<module>database-changelog</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
