--- a/modules/engines/engine-api/pom.xml
+++ b/modules/engines/engine-api/pom.xml
@@ -62,4 +62,8 @@
     	</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
