--- a/modules/engines/engine-command/pom.xml
+++ b/modules/engines/engine-command/pom.xml
@@ -62,7 +62,10 @@
             <artifactId>dirigible-api-facade-http</artifactId>
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
-		
     </dependencies>
+
+    <properties>
+        <license.header.location>../../../licensing-header.txt</license.header.location>
+    </properties>
 
 </project>
