--- a/modules/engines/engine-javascript/pom.xml
+++ b/modules/engines/engine-javascript/pom.xml
@@ -63,7 +63,10 @@
 		    <version>1.1</version>
 		    <scope>provided</scope>
 		</dependency>
-		
     </dependencies>
+
+    <properties>
+        <license.header.location>../../../licensing-header.txt</license.header.location>
+    </properties>
 
 </project>
