--- a/modules/engines/engine-job/pom.xml
+++ b/modules/engines/engine-job/pom.xml
@@ -99,4 +99,8 @@
     	</dependency>
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
