--- a/modules/engines/engine-listener/pom.xml
+++ b/modules/engines/engine-listener/pom.xml
@@ -98,4 +98,8 @@
         </dependency>    	
     </dependencies>
 
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
