--- a/modules/engines/engine-web/pom.xml
+++ b/modules/engines/engine-web/pom.xml
@@ -58,4 +58,8 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <license.header.location>../../../licensing-header.txt</license.header.location>
+    </properties>
+
 </project>
