--- a/modules/engines/pom.xml
+++ b/modules/engines/pom.xml
@@ -26,4 +26,8 @@
 		<module>engine-odata</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
