#1074 [Build] Allow each module to be build separately - Modules OData

--- a/modules/odata/odata-api/pom.xml
+++ b/modules/odata/odata-api/pom.xml
@@ -74,7 +74,10 @@
 		    <artifactId>jakarta.persistence</artifactId>
 		    <version>${persistence.api.version}</version>
 		</dependency>
-		
     </dependencies>
+
+	<properties>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
+	</properties>
 
 </project>
