--- a/modules/odata/pom.xml
+++ b/modules/odata/pom.xml
@@ -19,4 +19,8 @@
         <module>odata-core</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
