#1074 [Build] Allow each module to be build separately - Modules Security

--- a/modules/security/pom.xml
+++ b/modules/security/pom.xml
@@ -18,4 +18,8 @@
         <module>security-oauth</module>
 	</modules>
 
+	<properties>
+		<license.header.location>../../licensing-header.txt</license.header.location>
+	</properties>
+
 </project>
