#1075 [Build] JavaScript API tests fix

--- a/api/api-facade/api-tests/pom.xml
+++ b/api/api-facade/api-tests/pom.xml
@@ -253,6 +253,8 @@
     </dependencies>
 
     <properties>
+        <!-- Workaround to keep the JavaScript APIs test sources-->
+        <maven.clean.plugin.directory>target</maven.clean.plugin.directory>
         <license.header.location>../../../licensing-header.txt</license.header.location>
     </properties>
 
